sass/jssynth.scss
$font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", helvetica, arial, sans-serif;
$orange: orange;
$light-orange: papayawhip;
$red: #c00;
$light-red: #faa;
$black: #130f30;
$white: #fff;
$border-color: #ddd;
$light-gray: #f1f1f1;
$lighter-gray: #fafafa;
$link-color: #0af;

$size-half: 0.75rem;
$size-1: 1.5rem;
$size-2: 3.0rem;
$size-3: 4.5rem;
$size-4: 6.0rem;
$size-5: 9.0rem;

@import "controls.scss";
@import "base.scss";

html {
  font-size: 16px;
  -webkit-text-size-adjust: none;
  -ms-text-size-adjust: none;
  text-size-adjust: none;
}

body {
  margin: 0;
  padding: 0;
  min-height: 100vh;
  font-family: $font-family;
  font-size: 20px;
  background: $white;
  color: $black;
  line-height: 1.5em;
  font-weight: 300;
}

a {
  color: $link-color;
}

a.disabled {
  color: #aaa;
  text-decoration: none;
  cursor: default;
}

/* Header */

.logo {
  color: $red;
  line-height: 1.0em;
}

#transport {
  -webkit-justify-content: center;
  justify-content: center;
}

.play-icon {
  display: block;
  width: 0;
  height: 0;
  overflow: hidden;
  border-style: solid;
  border-width: 0.5rem 0.0rem 0.5rem 1.0rem;
  border-color: transparent transparent transparent $black;
}

.play-icon-enabled {
  border-color: $white;
}

.rewind-icon {
  display: block;
  width: 1.0rem;
  height: 1.0rem;
  overflow: hidden;
  border-style: solid;
  border-width: 0 0 0 3px;
  border-color: $black;
  box-sizing: border-box;
}

.rewind-icon::before {
  content: "\00a0";  // space character
  display: block;
  width: 0px;
  height: 0px;
  margin-left: -3px;
  border-style: solid;
  border-width: 0.5rem 1.0rem 0.5rem 0.0rem;
  border-color: transparent $black transparent transparent;
}

@media (hover) {
  .button-tab-list:hover .play-icon {
    border-color: transparent transparent transparent $orange;
  }

  .button-tab-list:hover .play-icon-enabled {
    border-color: $orange;
  }

  .button-tab-list:hover .rewind-icon {
    border-color: $orange;
  }

  .button-tab-list:hover .rewind-icon::before {
    border-color: transparent $orange transparent transparent;
  }
}

.popup-box {
  background: $white;
  position: absolute;
  right: 0;
  border: 2px solid $border-color;
  border-radius: 10px;
  width: 15.0rem;
  z-index: 1000;
}

.popup-box::before {
  content: "";
  position: absolute;
  bottom: 100%;
  right: 1.25rem;
  border-width: 1.25rem;
  border-style: solid;
  border-color: transparent transparent $border-color transparent;
}

.popup-box::after {
  content: "";
  position: absolute;
  bottom: 100%;
  right: 1.45rem;
  border-width: 1.1rem;
  border-style: solid;
  border-color: transparent transparent $white transparent;
}

.tab-strip {
  overflow: hidden;
  border-radius: 5px;
  -webkit-flex: 1;
  flex: 1;
}

.tab-strip-item {
  border-right: 1px solid $border-color;
}

.tab-strip-item:last-child {
  border-right: 0;
}

@media (max-width: 480px) {
  body {
    font-size: 16px;
  }

 .tab-strip {
    flex: 0 0 100%;
    order: 1;
 }
}

@media (max-width: 768px) {
  #header {
    -webkit-flex-flow: row wrap;
    flex-flow: row wrap;
  }

  #logo-container {
    -webkit-order: 1;
    order: 1;
    -webkit-flex: 1 50%;
    flex: 1 50%;
  }

  .logo {
    font-size: 2.0rem;
  }

  #transport {
    -webkit-order: 3;
    order: 3;
    -webkit-flex: 1 100%;
    flex: 1 100%;
    padding-top: 1.5rem;
    -webkit-justify-content: space-between;
    justify-content: space-between;
  }

  .transport-inner {
    -webkit-flex: 1;
    flex: 1;
  }

  #download-container {
    -webkit-order: 2;
    order: 2;
    -webkit-flex: 1 50%;
    flex: 1 50%;
  }
}

@media (max-width: 480px) {
  .logo {
    font-size: 1.5rem;
  }
}


/* Sequencer */

.sequencer-step-timeline {
  width: 100%;
  height: 1.5rem;
  position: absolute;
  bottom: 1px;
}

input[type='range'].sequencer-playback-header::-webkit-slider-runnable-track {
  height: 0px;
  background-color: red;
}

input[type='range'].sequencer-playback-header::-moz-range-track {
  height: 0px;
  background-color: red;
}

input[type='range'].sequencer-playback-header::-ms-track {
  height: 0px;
  background-color: red;
}

input[type='range'].sequencer-playback-header::-webkit-slider-thumb {
  background: #aaaaaaaa;
  border: 2px solid black;
  box-sizing: border-box;
  margin-top: -0.75rem;
}

input[type='range'].sequencer-playback-header::-moz-range-thumb {
  background: #aaaaaaaa;
  border: 2px solid black;
  box-sizing: border-box;
}

input[type='range'].sequencer-playback-header::-ms-thumb {
  background: #aaaaaaaa;
  border: 2px solid black;
  box-sizing: border-box;
}

input[type='range'].sequencer-playback-header::-webkit-slider-thumb:hover,
input[type='range'].sequencer-playback-header::-webkit-slider-thumb:active {
  background: #666666aa;
}

input[type='range'].sequencer-playback-header::-moz-range-thumb:hover,
input[type='range'].sequencer-playback-header::-moz-range-thumb:active {
  background: #666666aa;
}


input[type='range'].sequencer-playback-header::-ms-thumb:hover,
input[type='range'].sequencer-playback-header::-ms-thumb:active {
  background: #666666aa;
}


.sequencer-playback-line {
  position: absolute;
  top: calc(3.0rem - 1px);
  bottom: 0;
  width: 5px;
  background: $orange;
  opacity: 0.5;
}

.sequencer-cell {
  flex: 0 0 9.0rem;
}

.sequencer-body-left-padding {
  flex: 0 0 1.0rem;
  background-image: url(images/sequencer_row_background.png);
  background-size: 144px 72px;
  background-position: bottom right;
  image-rendering: pixelated;
}

.sequencer-body {
  background-image: url(images/sequencer_row_background.png);
  background-size: 144px 72px;
  background-position: bottom right;
  image-rendering: pixelated;
}

.sequencer-body-right-padding {
  flex: 1;
  min-width: 1.0rem;
  background-image: url(images/sequencer_row_background.png);
  background-size: 1px 72px;
  background-position: bottom;
  image-rendering: pixelated;  /* Prevent blurry/hidden image in Chrome */
}

.sequencer-cell-header {
  background-image: url(images/sequencer_timeline_ticks.png);
  background-repeat: repeat-x;
  background-position: bottom left;
  background-size: 36px 20px;
}

.timeline-pattern {
  position: absolute;
  display: block;
  height: calc(100% - 1px);
  box-sizing: border-box;
  border: 1px solid $black;
  border-radius: 5px;
  background: $light-gray;
}

.timeline-pattern-transparent {
  opacity: 50%;
}

.timeline-pattern-selected {
  background: $light-orange;
  border-color: $orange;
}

.timeline-pattern-error {
  background: $light-red;
  border-color: $red;
}

.timeline-pattern-divider {
  display: block;
  background: $light-gray;
  height: calc(100% - (5px * 2));
  width: 0;
  margin-top: 5px;
  border-width: 0 0 0 1px;
  border-color: $black;
  border-style: dashed;
}

.timeline-pattern-divider-selected {
  background: $light-orange;
  border-color: $orange;
}

.timeline-pattern-divider-error {
  background: $light-red;
  border-color: $red;
}

.timeline-pattern-name {
  position: absolute;
  background: $light-gray;
  margin-left: 0.5rem;
  margin-top: 0.25rem;
  line-height: 1.5rem;
  max-width: calc(100% - 1.5rem - 0.5rem - 1px);
  overflow: hidden;
  text-overflow: ellipsis;
}

.timeline-pattern-name-selected {
  background: $light-orange;
}

.timeline-pattern-name-error {
  background: $light-red;
}

.timeline-pattern-menu {
  display: block;
  border: 2px solid $border-color;
  border-radius: 10px;
  padding: 0.75rem;
  box-sizing: border-box;
  background: $lighter-gray;
}

.timeline-pattern-menu-arrow-outline {
  position: absolute;
  bottom: 0;
  width: 0;
  border-width: 1.0rem 1.0rem 0 1.0rem;
  border-style: solid;
  border-color: $border-color transparent transparent transparent;
}

.timeline-pattern-menu-arrow-fill {
  position: absolute;
  top: 0;
  width: 0;
  border-width: 0.85rem 0.85rem 0 0.85rem;
  border-style: solid;
  border-color: $lighter-gray transparent transparent transparent;
}

.expanded {
  width: 200px;
}

.expanded > li > .short-name {
  display: none;
}

.contracted > li > input {
  display: none;
}

.contracted > li > .sequencer-name-container,
.contracted > li > .sequencer-volume-container {
  display: none;
}


/* Instrument editor */

.instrument-panel {
  min-width: 600px;
}

@media (max-width: 768px) {
  .instrument-panel-container {
    -webkit-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: stretch;
    align-items: stretch;
    width: 100%;
  }

  .instrument-panel {
    -webkit-flex: 1;
    flex: 1;
    min-width: 0;
    margin: 0;
    padding-left: 0;
    padding-right: 0;
    border-left: 0;
    border-right: 0;
  }
}


/* Pattern editor */

.pane-tab-unselected {
  padding-bottom: 2px;
  border-bottom: 2px solid $border-color;
}

.pane-tab-selected {
  border-bottom: 4px solid $orange;
}

.note-container {
  flex: 1;
  min-width: 3.0rem;
  box-sizing: border-box;
  padding: 1px 2px;
}

.note-column-header {
  color: #ccc;
}

.note-box {
  display: block;
  height: 2.0rem;
  width: calc(100% - 2px);
  text-align: center;
  border: 1px solid $border-color;
  margin: 1px;
  font-size: 1.0rem;
  font-weight: normal;
  line-height: 2.0rem;
}

.note-box-focused {
  background: $light-orange;
  border: 2px solid $orange;
  margin: 0;
}

.note-box-invalid {
  background: #f66;
}

/*
An input that should be invisible (e.g. to detect keypresses). If you actually make it
fully invisible by using "display: none" etc., it no longer responds to key presses.
This style makes it as invisible as possible, while still not being _completely_ hidden.
*/
.hidden-input {
  background: $white;
  height: 0;
  width: 0;
  border: 1px solid $white;
  outline: none;
  caret-color: transparent;
}


/* Other */

.section-header {
  line-height: 1.5rem;
}

.indented {
  padding-left: 1.0rem;
}

.lightText { color: #aaa; }

@media (max-width: 480px) {
  .indented {
    padding-left: 0;
  }
}

